# libqmore

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  README.md
CMakeModules/: QMoreHeaderTesting.cmake  QMoreProjectSettings.cmake
example/: CMakeLists.txt  libqmore_en_US.ts
example/LedLights/: mainwindow.cpp  mainwindow.h
example/Sliders/: Sliders_en_US.ts  mainwindow.cpp  mainwindow.h
headertest/: CMakeLists.txt
libqmoretests/: CMakeLists.txt  floatslidertest.cpp  floatslidertest.h  ledindicatortest.cpp  ledindicatortest.h  main.cpp
libqmorewidgets/: CMakeLists.txt  floatslider.cpp  floatslider.h  ledindicator.cpp  ledindicator.h  ledindicatorbulb.cpp  ledindicatorbulb.h  qmorewidgets_global.h
